<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_apod_main_bg_color"
    android:paddingBottom="@dimen/activity_apod_main_nestedscroll_padding">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_apod_main_bg_color"
        android:paddingLeft="@dimen/activity_apod_main_bg_color_padding_left"
        android:paddingRight="@dimen/activity_apod_main_bg_color_padding_left"

        tools:context=".views.ApodMainActivity">

        <TextView
            android:id="@+id/good_eve_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/good_eve_text_ml"
            android:layout_marginTop="@dimen/good_eve_text_mt"
            android:gravity="center"
            android:text="@string/astronomy_picture"
            android:textColor="@color/good_eve_text_color"
            android:textSize="@dimen/good_eve_textsize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <TextView
            android:id="@+id/good_eve_sub_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/good_eve_sub_text_ml"
            android:layout_marginTop="@dimen/good_eve_sub_text_mp"
            android:gravity="center"
            android:text="@string/good_eve_sub_text"
            android:textColor="@color/good_eve_sub_text_color"
            android:textSize="@dimen/good_eve_sub_textsize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/good_eve_text"></TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/apod_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/apod_main_container_tp"
            android:background="@drawable/rounded_bg"
            android:paddingBottom="@dimen/apod_main_container_pb"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/good_eve_sub_text">


            <androidx.cardview.widget.CardView
                android:id="@+id/apod_main_image_cv"
                android:layout_width="@dimen/apod_main_image_cv_w"
                android:layout_height="@dimen/apod_main_image_cv_h"
                android:layout_marginTop="@dimen/apod_main_image_cv_mp"
                android:elevation="@dimen/apod_main_image_cv_elevation"
                app:cardCornerRadius="@dimen/apod_main_image_cv_radius"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apod_date">


                <ImageView
                    android:id="@+id/apod_main_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY">

                </ImageView>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/apod_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/apod_title_ml"
                android:layout_marginTop="@dimen/apod_title_mt"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/apod_titlesize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Rainy Day" />

            <TextView
                android:id="@+id/apod_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/apod_date_ml"
                android:layout_marginTop="@dimen/apod_date_mt"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/apod_datesize"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apod_title"
                tools:text="2019-02-02" />

            <!--  ExpandableTextView Container -->
            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/expand_text_view_ml"
                android:layout_marginTop="@dimen/expand_text_view_mt"
                android:layout_marginRight="@dimen/expand_text_view_mr"
                android:paddingRight="@dimen/expand_text_view_pr"
                app:collapseDrawable="@drawable/view_less_icon"
                app:expandDrawable="@drawable/view_more_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apod_main_image_cv"
                expandableTextView:animDuration="0"
                expandableTextView:maxCollapsedLines="5">

                <!-- simple text view  -->
                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/expandable_text_ml"
                    android:layout_marginRight="@dimen/expandable_text_ml"
                    android:textColor="@color/white"
                    android:textSize="@dimen/expandable_textsize"
                    android:textStyle="normal" />

                <!-- expandable ImageButton -->
                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/activity_apod_card_bg_color" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>


            <ToggleButton
                android:id="@+id/favbutton"
                android:layout_width="@dimen/favbutton_w"
                android:layout_height="@dimen/favbutton_w"
                android:layout_marginTop="@dimen/favbutton_mt"
                android:layout_marginRight="@dimen/favbutton_mr"
                android:background="@drawable/ic_fav_bg"
                android:gravity="center"
                android:textOff=""
                android:textOn=""
                android:textSize="0dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/progressBar_w"
            android:layout_height="@dimen/progressBar_w"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="@dimen/infoText_w"
            android:layout_height="@dimen/infoText_h"
            android:layout_marginTop="@dimen/infoText_mt"
            android:gravity="center"
            android:text="@string/infotext"
            android:textColor="@color/white"
            android:textSize="@dimen/infotextsize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apod_main_container"
            app:layout_goneMarginTop="@dimen/infotext_gone_margin" />

        <TextView
            android:id="@+id/datepicker"
            android:layout_width="@dimen/datepicker_w"
            android:layout_height="@dimen/datepicker_h"
            android:layout_marginTop="@dimen/datepicker_mt"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:text="@string/datepicker_text"
            android:textColor="@color/white"
            android:textSize="@dimen/datepicker_textsize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoText" />


        <TextView
            android:id="@+id/show_fav"
            android:layout_width="@dimen/show_fav_w"
            android:layout_height="@dimen/show_fav_h"
            android:layout_marginTop="@dimen/show_fav_mt"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:text="@string/view_fav_text"
            android:textColor="@color/white"
            android:textSize="@dimen/show_fav_textsize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datepicker">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>